pip install commands

--- a/book/some_content/JNB7_01_Sinusoidal_Model.ipynb
+++ b/book/some_content/JNB7_01_Sinusoidal_Model.ipynb
@@ -20,10 +20,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
+    "%pip install ipympl sounddevice soundfile scipy matplotlib ipywidgets\n",
     "import numpy as np \n",
     "import scipy as sp\n",
     "from scipy import signal\n",
