--- a/book/some_content/JNB7_01_Sinusoidal_Model.ipynb
+++ b/book/some_content/JNB7_01_Sinusoidal_Model.ipynb
@@ -24,23 +24,25 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "%pip install ipympl sounddevice soundfile scipy matplotlib ipywidgets\n",
     "import numpy as np \n",
-    "import scipy as sp\n",
-    "from scipy import signal\n",
-    "import sounddevice as sd\n",
-    "import soundfile as sf\n",
-    "from  matplotlib import patches\n",
     "from matplotlib.ticker import FormatStrFormatter\n",
     "from matplotlib import pyplot as plt\n",
-    "from ipywidgets import * # interactive plots\n",
+    "import ipywidgets as widgets # interactive plots\n",
     "import IPython\n",
-    "from IPython.display import Audio, Image\n",
-    "%matplotlib ipympl\n",
-    "# plt.rcParams['figure.dpi'] = 300\n",
-    "# plt.rcParams['savefig.dpi'] = 300\n",
-    "# sd.default.device = 1,0\n",
-    "# sd.query_devices()\n"
+    "from IPython.display import Audio, display\n",
+    "%matplotlib widget\n",
+    "\n",
+    "x = np.linspace(0, 10, 100)\n",
+    "fig, ax = plt.subplots()\n",
+    "line, = ax.plot(x, np.sin(x))\n",
+    "\n",
+    "def update_plot(phase=0.0):\n",
+    "    line.set_ydata(np.sin(x + phase))\n",
+    "    fig.canvas.draw_idle()\n",
+    "\n",
+    "slider = widgets.FloatSlider(min=0, max=2*np.pi, step=0.1, description='Phase:')\n",
+    "widgets.interact(update_plot, phase=slider)\n",
+    "plt.show()"
    ]
   },
   {
@@ -51,9 +53,9 @@
     "\n",
     "We recall the sinusoidal model as follows:\n",
     "\n",
-    "\\begin{equation}\n",
+    "$\\begin{equation}\n",
     "y(t) = A\\cos(2 \\pi f_{o}t +\\theta)\n",
-    "\\end{equation}\n",
+    "\\end{equation}$\n",
     "\n",
     "where $A$ is the amplitude, $f_{o}$ is the fundamental frequency (Hz), $t$ is the time (seconds), and $\\theta$ is the phase shift (radians). This is one of the most fundamental and useful models in audio signal processing and is the building block of many other types of sounds. Let's have a look at how the parameters affect the look and sound of this signal!\n"
    ]
