--- a/book/some_content/JNB7_01_Sinusoidal_Model.ipynb
+++ b/book/some_content/JNB7_01_Sinusoidal_Model.ipynb
@@ -24,25 +24,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "%pip install ipympl\n",
     "import numpy as np \n",
     "from matplotlib.ticker import FormatStrFormatter\n",
     "from matplotlib import pyplot as plt\n",
     "import ipywidgets as widgets # interactive plots\n",
     "import IPython\n",
     "from IPython.display import Audio, display\n",
-    "%matplotlib widget\n",
-    "\n",
-    "x = np.linspace(0, 10, 100)\n",
-    "fig, ax = plt.subplots()\n",
-    "line, = ax.plot(x, np.sin(x))\n",
-    "\n",
-    "def update_plot(phase=0.0):\n",
-    "    line.set_ydata(np.sin(x + phase))\n",
-    "    fig.canvas.draw_idle()\n",
-    "\n",
-    "slider = widgets.FloatSlider(min=0, max=2*np.pi, step=0.1, description='Phase:')\n",
-    "widgets.interact(update_plot, phase=slider)\n",
-    "plt.show()"
+    "%matplotlib widget"
    ]
   },
   {
@@ -62,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -126,17 +115,37 @@
     "axes.set_ylim([-1, 1])\n",
     "\n",
     "# Create the interactive plot\n",
-    "def update(A = 1, fo=100, theta = 0):\n",
+    "def update_sinusoid(A = 1, fo=100, theta = 0):\n",
     "    \n",
     "    y = A*np.cos(2*np.pi*fo*t + theta)\n",
     "\n",
     "    line.set_data(t, y)\n",
+    "    fig.canvas.draw_idle()\n",
     "    IPython.display.display(Audio(y.T, rate=1/dt,normalize=False))\n",
     "\n",
     "\n",
     "print('Move the slider to see how the parameters change the cosine and listen to the result')\n",
-    "interact(update, A = (0.1,1,0.01), fo=(100,1000,1), theta=(-4*np.pi,4*np.pi,np.pi/16)); \n",
+    "slider1 = widgets.FloatSlider(min=0.1, max=10, step=0.01, description='Amplitude:')\n",
+    "slider2 = widgets.FloatSlider(min=100, max=1000, step=1, description='Frequency (Hz):')\n",
+    "slider3 = widgets.FloatSlider(min=-4*np.pi, max=4*np.pi, step=np.pi/16, description='Phase Offset:')\n",
+    "widgets.interact(update_plot, A=slider1, fo=slider2, theta=slider3)\n",
+    "plt.show()\n",
     "\n",
+    "\n",
+    "# interact(update, A = (0.1,1,0.01), fo=(100,1000,1), theta=(-4*np.pi,4*np.pi,np.pi/16)); \n",
+    "\n",
+    "\n",
+    "# x = np.linspace(0, 10, 100)\n",
+    "# fig, ax = plt.subplots()\n",
+    "# line, = ax.plot(x, np.sin(x))\n",
+    "\n",
+    "# def update_plot(phase=0.0):\n",
+    "#     line.set_ydata(np.sin(x + phase))\n",
+    "#     fig.canvas.draw_idle()\n",
+    "\n",
+    "# slider = widgets.FloatSlider(min=0, max=2*np.pi, step=0.1, description='Phase:')\n",
+    "# widgets.interact(update_plot, phase=slider)\n",
+    "# plt.show()\n",
     "\n"
    ]
   },
