--- a/book/some_content/JNB7_01_Sinusoidal_Model.ipynb
+++ b/book/some_content/JNB7_01_Sinusoidal_Model.ipynb
@@ -4,9 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Signals\n",
     "## The Sinusoidal model\n",
-    "\n",
     "\n",
     "Written by: Randall Ali (r.ali@surrey.ac.uk)\n"
    ]
@@ -46,7 +44,7 @@
     "y(t) = A\\cos(2 \\pi f_{o}t +\\theta)\n",
     "\\end{equation}$\n",
     "\n",
-    "where $A$ is the amplitude, $f_{o}$ is the fundamental frequency (Hz), $t$ is the time (seconds), and $\\theta$ is the phase shift (radians). This is one of the most fundamental and useful models in audio signal processing and is the building block of many other types of sounds. Let's have a look at how the parameters affect the look and sound of this signal!\n"
+    "where $A$ is the amplitude, $f_{o}$ is the fundamental frequency (Hz), $t$ is the time (seconds), and $\\theta$ is a phase offset (radians). This is one of the most fundamental and useful models in audio signal processing and is the building block of many other types of sounds. Let's have a look at how the parameters affect the look and sound of this signal!\n"
    ]
   },
   {
@@ -103,9 +101,9 @@
    ],
    "source": [
     "# Setting up the plots\n",
-    "fig, axes = plt.subplots()\n",
+    "fig, axes = plt.subplots(figsize=(8,4))\n",
     "\n",
-    "dt = 0.0001 # time spacing\n",
+    "dt = 0.00001 # time spacing\n",
     "t = np.arange(0,2,dt) # range of times to plot on x-axis\n",
     "line, = axes.plot([], [], 'k')\n",
     "axes.set_ylabel('Amplitude', color='k')\n",
@@ -125,28 +123,17 @@
     "\n",
     "\n",
     "print('Move the slider to see how the parameters change the cosine and listen to the result')\n",
-    "slider1 = widgets.FloatSlider(min=0.1, max=10, step=0.01, description='Amplitude:')\n",
-    "slider2 = widgets.FloatSlider(min=100, max=1000, step=1, description='Frequency (Hz):')\n",
-    "slider3 = widgets.FloatSlider(min=-4*np.pi, max=4*np.pi, step=np.pi/16, description='Phase Offset:')\n",
-    "widgets.interact(update_plot, A=slider1, fo=slider2, theta=slider3)\n",
-    "plt.show()\n",
+    "slider1 = widgets.FloatSlider(min=0.1, max=1, step=0.01, value=0.5, description='Amplitude:', layout=widgets.Layout(width='500'))\n",
+    "slider1.style.description_width = '120px'\n",
     "\n",
+    "slider2 = widgets.FloatSlider(min=100, max=1000, step=1, description='Frequency (Hz):', layout=widgets.Layout(width='500'))\n",
+    "slider2.style.description_width = '120px'\n",
     "\n",
-    "# interact(update, A = (0.1,1,0.01), fo=(100,1000,1), theta=(-4*np.pi,4*np.pi,np.pi/16)); \n",
+    "slider3 = widgets.FloatSlider(min=-4*np.pi, max=4*np.pi, step=np.pi/16, description='Phase Offset (rad):',layout=widgets.Layout(width='500'))\n",
+    "slider3.style.description_width = '120px'\n",
     "\n",
-    "\n",
-    "# x = np.linspace(0, 10, 100)\n",
-    "# fig, ax = plt.subplots()\n",
-    "# line, = ax.plot(x, np.sin(x))\n",
-    "\n",
-    "# def update_plot(phase=0.0):\n",
-    "#     line.set_ydata(np.sin(x + phase))\n",
-    "#     fig.canvas.draw_idle()\n",
-    "\n",
-    "# slider = widgets.FloatSlider(min=0, max=2*np.pi, step=0.1, description='Phase:')\n",
-    "# widgets.interact(update_plot, phase=slider)\n",
-    "# plt.show()\n",
-    "\n"
+    "widgets.interact(update_sinusoid, A=slider1, fo=slider2, theta=slider3)\n",
+    "plt.show()"
    ]
   },
   {
@@ -160,7 +147,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -212,29 +199,40 @@
    ],
    "source": [
     "# Setting up the plots - some wildness with phase\n",
-    "fig, axes = plt.subplots()\n",
+    "fig, axes = plt.subplots(figsize=(8,4))\n",
     "\n",
-    "dt = 0.0001 # time spacing\n",
+    "dt = 0.00001 # time spacing\n",
     "t = np.arange(0,2,dt) # range of times to plot on x-axis\n",
     "line, = axes.plot([], [], 'k')\n",
     "axes.set_ylabel('Amplitude', color='k')\n",
     "axes.set_xlabel('Time (s)', color='k')\n",
     "axes.xaxis.set_major_formatter(FormatStrFormatter('%.1f'))\n",
-    "axes.set_xlim([0, 2])\n",
+    "axes.set_xlim([0, 0.1])\n",
     "axes.set_ylim([-1, 1])\n",
     "\n",
     "# Create the interactive plot\n",
-    "def update(A = 1, fo=1, f2 = 0.1):\n",
+    "def update_sinusoid(A = 1, fo=100, f2 = 0.1):\n",
     "    \n",
     "    theta = np.cos(2*np.pi*f2*t)\n",
     "    y = A*np.cos(2*np.pi*fo*t + theta)\n",
     "\n",
     "    line.set_data(t, y)\n",
+    "    fig.canvas.draw_idle()\n",
     "    IPython.display.display(Audio(y.T, rate=1/dt,normalize=False))\n",
     "\n",
     "\n",
     "print('Move the slider to see how the parameters change the cosine and listen to the result')\n",
-    "interact(update, A = (0.1,1,0.01), fo=(1,100,1), f2=(0.1,10,0.1)); \n"
+    "slider1 = widgets.FloatSlider(min=0.1, max=1, step=0.01, value=0.5, description='Amplitude:', layout=widgets.Layout(width='500'))\n",
+    "slider1.style.description_width = '120px'\n",
+    "\n",
+    "slider2 = widgets.FloatSlider(min=100, max=1000, step=1, description='Frequency (Hz):', layout=widgets.Layout(width='500'))\n",
+    "slider2.style.description_width = '120px'\n",
+    "\n",
+    "slider3 = widgets.FloatSlider(min=0.1, max=100, step=0.1, description='Mod. freq (Hz):',layout=widgets.Layout(width='500'))\n",
+    "slider3.style.description_width = '120px'\n",
+    "\n",
+    "widgets.interact(update_sinusoid, A=slider1, fo=slider2, f2=slider3)\n",
+    "plt.show()\n"
    ]
   },
   {
