--- a/book/fundamental/02_Phasors.ipynb
+++ b/book/fundamental/02_Phasors.ipynb
@@ -19,19 +19,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
+    "%pip install ipympl\n",
     "import numpy as np \n",
     "from  matplotlib import patches \n",
-    "# from AngleAnnotation import AngleAnnotation # this is some code to draw the argument of a complex number (taken from here: https://matplotlib.org/stable/gallery/text_labels_and_annotations/angle_annotation.html)\n",
     "from matplotlib.ticker import FormatStrFormatter\n",
     "from matplotlib import pyplot as plt\n",
     "import matplotlib.patches as patches\n",
     "from matplotlib.patches import ConnectionPatch\n",
     "from matplotlib import animation\n",
-    "from ipywidgets import * # interactive plots\n",
+    "from ipywidgets import widgets # interactive plots\n",
     "import IPython\n",
     "from IPython.display import Audio, Image\n",
     "%matplotlib ipympl\n"
@@ -47,23 +47,23 @@
     "\n",
     "The complex sinusoid is given by the following function\n",
     "\n",
-    "\\begin{equation}\n",
+    "$\\begin{equation}\n",
     "f(t) = e^{j\\omega t}\n",
-    "\\end{equation}\n",
+    "\\end{equation}$\n",
     "\n",
     "where $t$ is the time (seconds), and $\\omega$ is referred to as the angular frequency (radians/second) whic is defined as\n",
     "\n",
-    "\\begin{equation}\n",
+    "$\\begin{equation}\n",
     "\\omega = 2 \\pi f\n",
-    "\\end{equation}\n",
+    "\\end{equation}$\n",
     "\n",
     "where $f$ is the frequency (Hz).\n",
     "\n",
     "If we recall [Euler's formula](https://en.wikipedia.org/wiki/Euler%27s_formula) from the notebook on complex numbers, then we can deduce that the complex exponential can also be expressed as (we simply let $\\theta$ from the notebook on complex numbers be defined as $\\theta = \\omega t$)\n",
     "\n",
-    "\\begin{equation}\n",
+    "$\\begin{equation}\n",
     "e^{j\\omega t} = \\cos(\\omega t) + jsin(\\omega t)\n",
-    "\\end{equation}\n",
+    "\\end{equation}$\n",
     "\n",
     "So the complex exponential $e^{j\\omega t}$ has a real part of $\\cos(\\omega t)$ and an imaginary part of $\\sin(\\omega t)$. When we discussed Euler's identity in the notebook on complex numbers, we also saw that the exponential form of the complex number, which is identitcal to this complex exponential will correspond to a complex number that lies on the unit circle, and can be decomposed into a component on the real axis (the $\\cos(\\omega t)$ term) and another component on the imaginary axis (the $\\sin(\\omega t)$ term).\n",
     "\n",
@@ -72,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -163,8 +163,11 @@
     "    qi.set_UVC(0, z.imag)\n",
     "\n",
     "print('Move the slider to see how the complex exponential changes over time (seconds)')\n",
-    "interact(update, t = (0,40,0.001)); # this creates the range for the slider. here time goes for 0 to 40s in intervals of 0.001s\n",
+    "slider1 = widgets.FloatSlider(min=0, max=40, step=0.001, value=0, description='time:', layout=widgets.Layout(width='500'))\n",
+    "slider1.style.description_width = '120px'\n",
     "\n",
+    "widgets.interact(update, t=slider1)\n",
+    "plt.show()\n",
     "\n",
     "\n",
     "# These commands are just decorations on the plot \n",
