--- a/book/fundamental/01_Sinusoidal_Model.ipynb
+++ b/book/fundamental/01_Sinusoidal_Model.ipynb
@@ -5,8 +5,8 @@
    "metadata": {},
    "source": [
     "## The Sinusoidal model\n",
-    "\n",
-    "Written by: Randall Ali (r.ali@surrey.ac.uk)\n"
+    "This jupyter notebook gives some intuition on how the parameters of the sinusoidal model affect the signal both visually and audibly. \n",
+    "\n"
    ]
   },
   {
