--- a/book/fundamental/02_Phasors.ipynb
+++ b/book/fundamental/02_Phasors.ipynb
@@ -4,10 +4,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# TON1023: ASA: The complex sinusoid and phasors\n",
-    "\n",
-    "\n",
-    "Written by: Randall Ali (r.ali@surrey.ac.uk)\n"
+    "## The complex sinusoid and phasors\n",
+    "This notebook explores the notion of how we use the complex sinusoid and phasors to represent audio signals."
    ]
   },
   {
@@ -33,8 +31,20 @@
     "from matplotlib import animation\n",
     "from ipywidgets import widgets # interactive plots\n",
     "import IPython\n",
-    "from IPython.display import Audio, Image\n",
-    "%matplotlib ipympl\n"
+    "from IPython.display import Audio, Image, HTML\n",
+    "%matplotlib ipympl\n",
+    "\n",
+    "controls_css = \"\"\"\n",
+    "<style>\n",
+    ".anim-controls button {\n",
+    "    font-size: 4px !important;\n",
+    "    padding: 2px 10px !important;\n",
+    "}\n",
+    ".anim-controls {\n",
+    "    margin-top: 4px;\n",
+    "}\n",
+    "</style>\n",
+    "\"\"\""
    ]
   },
   {
@@ -157,10 +167,12 @@
     "    z = np.exp(1j*theta) # Define the complex exponential\n",
     "    \n",
     "    # These update the plots\n",
+    "    #cn.set_data(z.real, z.imag)\n",
     "    cn.set_offsets([z.real, z.imag])\n",
     "    qc.set_UVC(z.real, z.imag)\n",
     "    qr.set_UVC(z.real, 0)\n",
     "    qi.set_UVC(0, z.imag)\n",
+    "    fig.canvas.draw_idle()\n",
     "\n",
     "print('Move the slider to see how the complex exponential changes over time (seconds)')\n",
     "slider1 = widgets.FloatSlider(min=0, max=40, step=0.001, value=0, description='time:', layout=widgets.Layout(width='500'))\n",
@@ -203,7 +215,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -235,12 +247,12 @@
    "source": [
     "#%debug\n",
     "\n",
-    "fo = 2  # frequency (Hz) (Change this to see how things vary!)\n",
+    "fo = 1  # frequency (Hz) (Change this to see how things vary!)\n",
     "\n",
     "omega_o = 2*np.pi*fo  # angular frequency\n",
     "T = np.abs((2*np.pi)/omega_o) # period (we use the absolute value in case the freq. is negative)\n",
-    "Np = 3        # number of periods\n",
-    "dt = 0.005\n",
+    "Np = 2        # number of periods\n",
+    "dt = 0.01\n",
     "t = np.arange(0,Np*T,dt) # time\n",
     "N_frames =  int(np.round((Np*T)/dt))\n",
     "\n",
@@ -283,13 +295,11 @@
     "axes[1].grid(color='lightgrey',alpha=0.4)\n",
     "axes[1].axhline(y=0, color='lightgrey',alpha=0.8)\n",
     "\n",
-    "\n",
     "def animate(i): # animate is in the matplotlib library that can do animations. i is a running index over which you update, in this case it is time.\n",
     " \n",
-    "    \n",
     "    x = np.cos(omega_o*t[i])\n",
     "    y = np.sin(omega_o*t[i])\n",
-    "\n",
+    "    \n",
     "    line_mainstem.set_data([xO, x],[yO, y])\n",
     "    line_mainpt.set_data([x,x],[y,y])\n",
     "    \n",
@@ -306,11 +316,12 @@
     "    line_cospt.set_data([t[i],t[i]],[x,x])\n",
     "    line_sinpt.set_data([t[i],t[i]],[y,y])\n",
     "    \n",
+    "    return line_mainstem,line_mainpt, line_mainstem_cos, line_mainpt_cos, line_mainstem_sin, line_mainpt_sin, line_cos, line_sin, line_cospt, line_sinpt\n",
+    "    \n",
+    "anim = animation.FuncAnimation(fig, animate, frames=N_frames, interval=40, blit=False) # this calls the function to do the animation\n",
+    "plt.close(fig)\n",
     "\n",
-    "anim = animation.FuncAnimation(fig, animate, frames=N_frames, interval=20, blit=False) # this calls the function to do the animation\n",
-    "\n",
-    "\n",
-    "\n"
+    "HTML(controls_css + anim.to_jshtml())\n"
    ]
   },
   {
@@ -321,25 +332,25 @@
     "\n",
     "In the previous complex exponentials, the amplitude of the sinusoidal waveforms was always equal to 1 and the corresponding phase was zero. Hence in order to generalize the complex exponential to incorporate both amplitude and phase information, we consider the following\n",
     "\n",
-    "\\begin{equation}\n",
+    "$\\begin{equation}\n",
     "Ae^{j(\\omega t + \\phi)} = A \\cos(\\omega t + \\phi) + jA \\sin (\\omega t + \\phi)\n",
-    "\\end{equation}\n",
+    "\\end{equation}$\n",
     "\n",
     "where $A$ is the amplitude of the complex exponential and $\\phi$ is the phase (recall from our sinusoidal model notebook, that the phase corresponds to a translation of the sinusoidal waveform along the time axis). \n",
     "\n",
     "Recalling the properties of exponential functions, we can also split the complex exponential into two parts as follows\n",
     "\n",
-    "\\begin{equation}\n",
+    "$\\begin{equation}\n",
     "Ae^{j(\\omega t + \\phi)} = \\underbrace{Ae^{j\\phi}}_{\\text{Phasor}}  \\underbrace{e^{j\\omega t}}_{\\text{Sinusoid}} \n",
-    "\\end{equation}\n",
+    "\\end{equation}$\n",
     "\n",
     "where we have separated the $e^{j\\omega t}$ term, i.e. the complex exponential we previously discussed (amplitude = 1, phase = 0), and a second term, $Ae^{j\\phi}$ which we refer to as the **phasor**. This phasor is a complex number in its exponential form that contains the remaining information about the amplitude and phase of the sinusoid and is a constant, i.e. it does not depend on time. \n",
     "\n",
     "If we take only the real part of the general exponential function, then we get the cosine wave with corresponding amplitude and phase, i.e\n",
     "\n",
-    "\\begin{equation}\n",
+    "$\\begin{equation}\n",
     "\\Re\\{Ae^{j(\\omega t + \\phi)}\\} = \\Re\\{Ae^{j\\phi} e^{j \\omega t} \\}  = A \\cos(\\omega t + \\phi) \n",
-    "\\end{equation}\n",
+    "\\end{equation}$\n",
     "\n",
     "where $\\Re\\{.\\}$ is an operator that takes the real part. \n",
     "\n",
