--- a/book/fundamental/02_Phasors.ipynb
+++ b/book/fundamental/02_Phasors.ipynb
@@ -51,13 +51,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## The Complex Sinusoid\n",
-    "\n",
-    "### Definitions\n",
+    "### The complex Sinusoid\n",
     "\n",
     "The complex sinusoid is given by the following function\n",
     "\n",
-    "$\\begin{equation}\n",
+    "$\\centering \\begin{equation}\n",
     "f(t) = e^{j\\omega t}\n",
     "\\end{equation}$\n",
     "\n",
