--- a/book/fundamental/02_Phasors.ipynb
+++ b/book/fundamental/02_Phasors.ipynb
@@ -51,15 +51,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### The complex Sinusoid\n",
+    "### The complex sinusoid\n",
     "\n",
     "The complex sinusoid is given by the following function\n",
     "\n",
-    "$\\centering \\begin{equation}\n",
+    "$\\begin{equation*}\n",
     "f(t) = e^{j\\omega t}\n",
-    "\\end{equation}$\n",
+    "\\end{equation*}$\n",
     "\n",
-    "where $t$ is the time (seconds), and $\\omega$ is referred to as the angular frequency (radians/second) whic is defined as\n",
+    "where $t$ is the time (seconds), and $\\omega$ is referred to as the angular frequency (radians/second) which is defined as\n",
     "\n",
     "$\\begin{equation}\n",
     "\\omega = 2 \\pi f\n",
@@ -326,7 +326,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## What is a phasor?\n",
+    "### What is a phasor?\n",
     "\n",
     "In the previous complex exponentials, the amplitude of the sinusoidal waveforms was always equal to 1 and the corresponding phase was zero. Hence in order to generalize the complex exponential to incorporate both amplitude and phase information, we consider the following\n",
     "\n",
@@ -475,7 +475,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Adding sinusoids\n",
+    "### Adding sinusoids\n",
     "\n",
     "The reason for using complex sinusoids is that it greatly simplifies some of the math when working with them since operations such as differentiation and integration become very easy. It also allows us to make the addition of two sinusoids with the same frequency quite simple, again with a nice graphical interpretation. \n",
     "\n",
@@ -705,11 +705,7 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": [
-    "## A challenge for you\n",
-    "\n",
-    "We have seen how to add sinusoids with the same frequency and the corresponding graphical representation. What about if the sinusoids were of a different frequency? How would the summation look from a graphical perspective? If you have time, a challenge for you is to program an animation to depict this. One hint is to think about vector addition of the phasors. Good luck!  "
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
