--- a/book/fundamental/02_Phasors.ipynb
+++ b/book/fundamental/02_Phasors.ipynb
@@ -157,7 +157,7 @@
     "    \n",
     "    \n",
     "# Create the interactive plot\n",
-    "def update(t = 0): # in the brackets here is the initial value of the variable you want to put on the slider\n",
+    "def update(t = 0): # the initial value of the variable you want to put on the slider\n",
     "    \n",
     "    omega = 2*np.pi*f # Angular frequency (rad/s)\n",
     "    theta = omega*t\n",
