finished draft of phasors

--- a/book/fundamental/02_Phasors.ipynb
+++ b/book/fundamental/02_Phasors.ipynb
@@ -243,8 +243,6 @@
     }
    ],
    "source": [
-    "#%debug\n",
-    "\n",
     "fo = 1  # frequency (Hz) (Change this to see how things vary!)\n",
     "\n",
     "omega_o = 2*np.pi*fo  # angular frequency\n",
@@ -253,7 +251,8 @@
     "dt = 0.01\n",
     "t = np.arange(0,Np*T,dt) # time\n",
     "N_frames =  int(np.round((Np*T)/dt))\n",
-    "\n",
+    "xcos = np.cos(omega_o*t)\n",
+    "ysin = np.sin(omega_o*t)\n",
     "\n",
     "# Unit circle\n",
     "xO,yO = (0,0)  # origin\n",
@@ -294,9 +293,9 @@
     "axes[1].axhline(y=0, color='lightgrey',alpha=0.8)\n",
     "\n",
     "def animate(i): # animate is in the matplotlib library that can do animations. i is a running index over which you update, in this case it is time.\n",
-    " \n",
-    "    x = np.cos(omega_o*t[i])\n",
-    "    y = np.sin(omega_o*t[i])\n",
+    " \t\n",
+    "    x = xcos[i]\n",
+    "    y = ysin[i]\n",
     "    \n",
     "    line_mainstem.set_data([xO, x],[yO, y])\n",
     "    line_mainpt.set_data([x,x],[y,y])\n",
@@ -316,10 +315,12 @@
     "    \n",
     "    return line_mainstem,line_mainpt, line_mainstem_cos, line_mainpt_cos, line_mainstem_sin, line_mainpt_sin, line_cos, line_sin, line_cospt, line_sinpt\n",
     "    \n",
-    "anim = animation.FuncAnimation(fig, animate, frames=N_frames, interval=40, blit=False) # this calls the function to do the animation\n",
+    "anim = animation.FuncAnimation(fig, animate, frames=N_frames, interval=40, blit=True) # this calls the function to do the animation\n",
     "plt.close(fig)\n",
     "\n",
-    "HTML(controls_css + anim.to_jshtml())\n"
+    "HTML(controls_css + anim.to_jshtml())\n",
+    "\n",
+    "\n"
    ]
   },
   {
@@ -357,7 +358,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -395,11 +396,11 @@
     "omega_o = 2*np.pi*fo  # angular frequency\n",
     "\n",
     "T = np.abs((2*np.pi)/omega_o) # period (we use the absolute value in case the freq. is negative)\n",
-    "Np = 3        # number of periods\n",
-    "dt = 0.005\n",
+    "Np = 2        # number of periods\n",
+    "dt = 0.01\n",
     "t = np.arange(0,Np*T,dt) # time\n",
     "N_frames =  int(np.round((Np*T)/dt))\n",
-    "\n",
+    "z_compsin = z_phasor*np.exp(1j*omega_o*t)\n",
     "\n",
     "# Unit circle\n",
     "xO,yO = (0,0)  # origin\n",
@@ -450,7 +451,7 @@
     "\n",
     "def animate2(i): # animate is in the matplotlib library that can do animations. i is a running index over which you update, in this case it is time.\n",
     "\n",
-    "    z = z_phasor*np.exp(1j*omega_o*t[i])\n",
+    "    z = z_compsin[i]\n",
     "    \n",
     "    x2 = np.real(z)\n",
     "    y2 = np.imag(z)\n",
@@ -465,10 +466,13 @@
     "    # cosine waves    \n",
     "    line_cos2.set_data(t[0:i+1],np.real(z_phasor*np.exp(1j*omega_o*t[0:i+1])))\n",
     "    line_cospt2.set_data([t[i],t[i]],[x2,x2])\n",
+    "    \n",
+    "    return line_mainstem2, line_mainpt2, line_mainstem_cos2, line_mainpt_cos2, line_cos2,line_cospt2\n",
     "\n",
+    "anim2 = animation.FuncAnimation(fig2, animate2, frames=N_frames, interval=40, blit=True) # this calls the function to do the animation\n",
+    "plt.close(fig2)\n",
     "\n",
-    "\n",
-    "anim2 = animation.FuncAnimation(fig2, animate2, frames=N_frames, interval=20, blit=False) # this calls the function to do the animation\n"
+    "HTML(controls_css + anim2.to_jshtml())\n"
    ]
   },
   {
@@ -481,24 +485,24 @@
     "\n",
     "Let's consider the addition of two sinusoids, each with different amplitude and phase, but with the same frequency (omega is the same for both)\n",
     "\n",
-    "\\begin{align}\n",
+    "$\\begin{align}\n",
     "A_{1} \\cos(\\omega t + \\phi_{1}) + A_{2} \\cos(\\omega t + \\phi_{2}) \n",
-    "\\end{align}\n",
+    "\\end{align}$\n",
     "\n",
     "The phasors for each of these sinusoids are \n",
-    "\\begin{align}\n",
+    "$\\begin{align}\n",
     "A_{1} \\cos(\\omega t + \\phi_{1}) &\\rightarrow A_{1} e^{j\\phi_{1}} \\nonumber \\\\\n",
     "A_{2} \\cos(\\omega t + \\phi_{2}) &\\rightarrow A_{2} e^{j\\phi_{2}} \n",
-    "\\end{align}\n",
+    "\\end{align}$\n",
     "\n",
     "And hence we can do the addition using complex exponentials as follows\n",
     "\n",
-    "\\begin{align}\n",
+    "$\\begin{align}\n",
     "A_{1} \\cos(\\omega t + \\phi_{1}) + A_{2} \\cos(\\omega t + \\phi_{2}) &= \\Re\\{A_{1} e^{j\\phi_{1}} e^{j\\omega t}\\} + \\Re\\{A_{2} e^{j\\phi_{2}} e^{j\\omega t}\\} \\nonumber\\\\\n",
     "%\n",
     "&= \\Re\\{A_{1} e^{j\\phi_{1}} e^{j\\omega t} + A_{2} e^{j\\phi_{2}} e^{j\\omega t}\\} \\nonumber\\\\\n",
     "&= \\Re\\{ (A_{1} e^{j\\phi_{1}} +  A_{2} e^{j\\phi_{2}}) e^{j\\omega t}\\} \\nonumber\\\\\n",
-    "\\end{align}\n",
+    "\\end{align}$\n",
     "\n",
     "At this point we can already see that the sum of the two sinusoids is the real part of the sum of the corresponding phasors multiplied with the complex exponential. We can simplify the expression a bit further however, since we can recognize that the sum of the phasors, $(A_{1} e^{j\\phi_{1}} +  A_{2} e^{j\\phi_{2}})$, will correspond to another complex number that can also be expressed as a phasor. \n",
     "\n",
@@ -506,22 +510,22 @@
     "\n",
     "And so continuing with the addition of the sinusoids, we have\n",
     "\n",
-    "\\begin{align}\n",
+    "$\\begin{align}\n",
     "A_{1} \\cos(\\omega t + \\phi_{1}) + A_{2} \\cos(\\omega t + \\phi_{2}) &= \\Re\\{ (A_{1} e^{j\\phi_{1}} +  A_{2} e^{j\\phi_{2}}) e^{j\\omega t}\\} \\nonumber\\\\\n",
     "&= \\Re\\{ (|z_{sum}| e^{j \\angle (z_{sum})}) e^{j\\omega t}\\} \\nonumber\\\\\n",
     "&= \\Re\\{ |z_{sum}| e^{j (\\omega t + \\angle (z_{sum})}\\} \\nonumber\\\\\n",
     "&=  |z_{sum}| \\cos\\left(\\omega t + \\angle (z_{sum})\\right)  \\nonumber\\\\\n",
-    "\\end{align}\n",
+    "\\end{align}$\n",
     "\n",
     "So to add two sinusoids of same frequency, all we need to do is find the modulus and argument of the sum of the phasors defining the sinusoids and that's it!\n",
     "\n",
     "How about another animation? :)\n",
-    "(For this animation, if things start to get strange, just restart the kernal and run it again (you may have to re-run the very first cell of this notebook to re-import the packages)). I know the code seems a bit long (probably not even efficient!), but it's simply because we now have 3 sets of complex numbers to plot, so the length of the code is just due to repetition, nothing especially new being introduced here. Nevertheless, play around with the different phasors and have a look at the sum. The green and orange lines are due to the individual phasors and the brown line is the sum of the two sinusoids. "
+    "I know the code seems a bit long (probably not very efficient either!), but it's simply because we now have 3 sets of complex numbers to plot, so the length of the code is just due to repetition, nothing especially new being introduced here. Nevertheless, play around with the different phasors and have a look at the sum. The green and orange lines are due to the individual phasors and the brown line is the sum of the two sinusoids. "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -566,14 +570,18 @@
     "z_sum_arg = np.angle(z_sum)\n",
     "\n",
     "# complex exponential parameters\n",
-    "fo = 2  # frequency (Hz) \n",
+    "fo = 1  # frequency (Hz) \n",
     "omega_o = 2*np.pi*fo  # angular frequency\n",
     "\n",
     "T = np.abs((2*np.pi)/omega_o) # period (we use the absolute value in case the freq. is negative)\n",
-    "Np = 3        # number of periods\n",
-    "dt = 0.005\n",
+    "Np = 2        # number of periods\n",
+    "dt = 0.01\n",
     "t = np.arange(0,Np*T,dt) # time\n",
     "N_frames =  int(np.round((Np*T)/dt))\n",
+    "\n",
+    "z1_compsin = z1_phasor*np.exp(1j*omega_o*t)\n",
+    "z2_compsin = z2_phasor*np.exp(1j*omega_o*t)\n",
+    "z3_compsin = z_sum_modulus*np.exp(1j*(omega_o*t + z_sum_arg)) # I could have simply multiplied by z_sum, but wanted to show you that the formula we derived above holds.\n",
     "\n",
     "#\n",
     "xylims = 1\n",
@@ -649,7 +657,7 @@
     "\n",
     "    \n",
     "    # For phasor 1\n",
-    "    z = z1_phasor*np.exp(1j*omega_o*t[i])\n",
+    "    z = z1_compsin[i]\n",
     "    x1 = np.real(z)\n",
     "    y1 = np.imag(z)\n",
     "    line_mainstem3.set_data([xO, x1],[yO, y1])\n",
@@ -665,7 +673,7 @@
     "\n",
     "    \n",
     "    # For phasor 2\n",
-    "    z2 = z2_phasor*np.exp(1j*omega_o*t[i])\n",
+    "    z2 = z2_compsin[i]\n",
     "    x2 = np.real(z2)\n",
     "    y2 = np.imag(z2)\n",
     "    line2_mainstem3.set_data([xO, x2],[yO, y2])\n",
@@ -680,7 +688,7 @@
     "    \n",
     "\n",
     "    # For the sum\n",
-    "    z3 = z_sum_modulus*np.exp(1j*(omega_o*t[i] + z_sum_arg)) # I could have simply multiplied by z_sum, but wanted to show you that the formula we derived above holds.\n",
+    "    z3 = z3_compsin[i] \n",
     "    x3 = np.real(z3)\n",
     "    y3 = np.imag(z3)\n",
     "    line3_mainstem3.set_data([xO, x3],[yO, y3])\n",
@@ -698,8 +706,10 @@
     "\n",
     "    \n",
     "\n",
-    "anim = animation.FuncAnimation(fig3, animate, frames=N_frames, interval=20, blit=False) # this calls the function to do the animation\n",
-    "\n"
+    "anim = animation.FuncAnimation(fig3, animate, frames=N_frames, interval=40, blit=True) # this calls the function to do the animation\n",
+    "\n",
+    "plt.close(fig3)\n",
+    "HTML(controls_css + anim.to_jshtml())"
    ]
   },
   {
