--- a/book/fundamental/02_Phasors.ipynb
+++ b/book/fundamental/02_Phasors.ipynb
@@ -721,7 +721,10 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import soundfile as sf\n",
+    "[x, fs] = sf.read('audio/F2.wav')"
+   ]
   }
  ],
  "metadata": {
