added new chapters

--- a/book/fundamental/03_Fourier_Series.ipynb
+++ b/book/fundamental/03_Fourier_Series.ipynb
@@ -4,26 +4,17 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# TON 1023 - Fourier Series\n",
-    "## Fourier Series of a square wave\n",
-    "\n",
-    "\n",
-    "Written by: Randall Ali (r.ali@surrey.ac.uk)\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Firstly let us import several of the packages we will need. If these packages are not available on your machine, you will have to install them first. "
+    "## The Fourier Series\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Importing the packages as usual\n",
+    "\n",
     "import numpy as np \n",
     "import scipy as sp\n",
     "from scipy import signal\n",
@@ -86,7 +77,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -175,7 +166,7 @@
     "        \n",
     "    Y_sum = np.sum(Y,axis=1)\n",
     "    sum_waves.set_data(t, Y_sum)\n",
-    "    \n",
+    "    fig.canvas.draw_idle()\n",
     "    IPython.display.display(Audio(Y_sum.T, rate=1/dt,normalize=True))\n",
     "\n",
     "\n",
