added new chapters

--- a/book/fundamental/03_Fourier_Series.ipynb
+++ b/book/fundamental/03_Fourier_Series.ipynb
@@ -14,20 +14,13 @@
    "outputs": [],
    "source": [
     "# Importing the packages as usual\n",
-    "\n",
+    "%pip install ipympl\n",
     "import numpy as np \n",
-    "import scipy as sp\n",
-    "from scipy import signal\n",
-    "import sounddevice as sd\n",
-    "import soundfile as sf\n",
-    "from  matplotlib import patches\n",
-    "from matplotlib.ticker import FormatStrFormatter\n",
     "from matplotlib import pyplot as plt\n",
     "from ipywidgets import * # interactive plots\n",
     "import IPython\n",
     "from IPython.display import Audio, Image\n",
-    "%matplotlib ipympl\n",
-    "\n"
+    "%matplotlib ipympl\n"
    ]
   },
   {
@@ -129,7 +122,7 @@
    ],
    "source": [
     "# Setting up the plots\n",
-    "fig, axes = plt.subplots(2,1, figsize=(10, 6))\n",
+    "fig, axes = plt.subplots(2,1)\n",
     "fig.subplots_adjust(hspace=0.5)  # horizontal spacing\n",
     "\n",
     "dt = 0.00001 # time spacing\n",
@@ -168,34 +161,9 @@
     "    sum_waves.set_data(t, Y_sum)\n",
     "    fig.canvas.draw_idle()\n",
     "    IPython.display.display(Audio(Y_sum.T, rate=1/dt,normalize=True))\n",
-    "\n",
-    "\n",
-    "# def update(N = 1, f=300):\n",
-    "    \n",
-    "#     axes[0].clear()\n",
-    "#     axes[0].set_xlim([0, 0.01])\n",
-    "#     Y = np.zeros([len(t),N])\n",
-    "#     for n in range(N):\n",
-    "#         fo = (n+1)*f\n",
-    "#         To = 1/fo\n",
-    "#         an = (1/( ((n+1)**2) * (np.pi**2) )) * ( ((-1)**(n+1))-1)\n",
-    "#         print('n = ', n+1, ' an = ', an)\n",
-    "#         bn = (-1/((n+1)*np.pi))*((-1)**(n+1))\n",
-    "#         print('n = ', n+1, ' bn = ', bn)\n",
-    "#         Y[:,n] = an*np.cos(2*np.pi*fo*t) + bn*np.sin(2*np.pi*fo*t)\n",
-    "#         axes[0].plot(t, Y[:,n])\n",
-    "#         axes[0].set_title('Individual Sinusoids, n = '+str(n+1))\n",
-    "        \n",
-    "#     Y_sum = np.sum(Y,axis=1)\n",
-    "#     sum_waves.set_data(t, Y_sum+0.25)\n",
-    "    \n",
-    "#     IPython.display.display(Audio(Y_sum.T, rate=1/dt,normalize=True))\n",
-    "\n",
     "    \n",
     "print('Move the slider to see how the parameters change the cosine and listen to the result. The sound you hear is the sum of the sinusoids.')\n",
-    "interact(update, N = (1,30,1), f=(100,1000,1)); \n",
-    "\n",
-    "\n"
+    "interact(update, N = (1,30,1), f=(100,1000,1));"
    ]
   },
   {
