--- a/book/fundamental/04_Sampling.ipynb
+++ b/book/fundamental/04_Sampling.ipynb
@@ -4,11 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## TON 1023 - Sampling\n",
-    "\n",
-    "In this notebook we look into the issue of aliasing when making outdoor recordings.\n",
-    "\n",
-    "Written by: Randall Ali (contact r.ali@surrey.ac.uk for questions/errors/suggestions!)"
+    "## Sampling\n"
    ]
   },
   {
