--- a/book/fundamental/06_Time_Freq_Analysis.ipynb
+++ b/book/fundamental/06_Time_Freq_Analysis.ipynb
@@ -4,22 +4,18 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Acoustic Signal Processing for Bioacoustics\n",
-    "### 03 - Time Frequency Analysis\n",
-    "\n",
-    "In this notebook, we will look into the time-frequency analysis of signals using the short time Fourier transform (STFT).\n",
-    "\n",
-    "Written by: Randall Ali (contact r.ali@surrey.ac.uk for questions/errors/suggestions!)\n"
+    "## 03 - Time Frequency Analysis"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {
     "scrolled": true
    },
    "outputs": [],
    "source": [
+    "%pip install ipympl\n",
     "import numpy as np \n",
     "import scipy as sp\n",
     "from scipy import signal\n",
@@ -29,7 +25,19 @@
     "from ipywidgets import * # interactive plots\n",
     "import IPython\n",
     "from IPython.display import Audio, Image\n",
-    "%matplotlib ipympl"
+    "import io\n",
+    "from scipy.io import wavfile\n",
+    "from pyodide.http import pyfetch\n",
+    "%matplotlib ipympl\n",
+    "\n",
+    "# Must be the RAW link, not GitHub HTML\n",
+    "url = \"https://raw.githubusercontent.com/randyaliased/acspjbook/main/book/audio/F2.wav\"\n",
+    "\n",
+    "async def read_wav_from_url(url):\n",
+    "    response = await pyfetch(url)\n",
+    "    wav_bytes = await response.bytes()  # get raw binary\n",
+    "    return wavfile.read(io.BytesIO(wav_bytes))\n",
+    "\n"
    ]
   },
   {
@@ -86,14 +94,12 @@
     "</div>\n",
     "\n",
     "<br>\n",
-    "<br>\n",
-    "\n",
-    "#### Let's import a bioacoustic signal and perform an STFT on it\n"
+    "<br>\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -150,9 +156,10 @@
     }
    ],
    "source": [
-    "# Import bioacoustic signal\n",
-    "[y_raw,fs] = sf.read('./audio/piping_guan_6k.wav') # Read in your audio file\n",
-    "yy = y_raw[1*fs:3*fs] # Extract a section\n",
+    "# Import  signal\n",
+    "fs, y_raw = await read_wav_from_url(url)\n",
+    "\n",
+    "#yy = y_raw[1*fs:3*fs] # Extract a section\n",
     "yy = yy - np.mean(yy) # Removing the mean of the signal\n",
     "del y_raw\n",
     "\n",
@@ -188,7 +195,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -286,6 +293,7 @@
     "\n",
     "    f_sg, t_sg, Z_mag = signal.spectrogram(yy, fs=fs,nperseg=N,window='hann',mode='magnitude',noverlap=noverlap*N)\n",
     "    Z_dB = 10*np.log10(Z_mag**2) \n",
+    "    fig.canvas.draw_idle()\n",
     "    axes.set_title('Spectrogram with $N$ = '+ str(N)+ ' and noverlap = '+ str(np.round(noverlap,decimals=1)))\n",
     "    sp.set_data(Z_dB)\n",
     "\n",
